# sdk

./: CHANGELOG.md  Cargo.toml  clippy.toml  default.nix
.github/: PULL_REQUEST_TEMPLATE_FOR_UPDATING_REPLICA.md
.github/workflows/: e2e-selenium.yml  e2e.yml  update-replica-version--open-pr.js  update-replica-version.yml
docs/: dfx-json-schema.json
docs/cli-reference/: dfx-deploy.md  dfx-deploy.mdx
docs/design/: asset-canister-interface.md
docs/specification/: dfx-configuration.adoc
e2e/bats/: default.nix
e2e/node/: default.nix  package-lock.json  package.json  test.js
e2e/tests-dfx/: assetscanister.bash  create.bash  extension.bash  install.bash  ledger.bash
e2e/tests-telemetry/: canister.bash
js-user-library/: package-lock.json  package.json
js-user-library/src/: httpAgent.ts  makeActor.test.ts
nix/: default.nix  rust-workspace.nix  sources.json
nix/overlays/: dfinity-sdk.nix  dfinity.nix
scripts/workflows/: e2e-matrix.py  selenium-e2e-test.py
src/canisters/frontend/ic-certified-assets/: Cargo.toml
src/canisters/frontend/ic-certified-assets/src/: lib.rs  state_machine.rs  tests.rs
src/dfx/: Cargo.toml
src/dfx-core/: Cargo.toml
src/dfx-core/src/config/: cache.rs
src/dfx-core/src/error/: network_config.rs
src/dfx-core/src/network/: provider.rs
src/dfx/assets/: dfx-asset-sources.toml
src/dfx/assets/new_project_node_files/: webpack.config.js
src/dfx/src/: main.rs
src/dfx/src/commands/: build.rs  deploy.rs  generate.rs  mod.rs  pull.rs  quickstart.rs
src/distributed/: assetstorage.did
src/userlib/js/: default.nix
(+30 files in other folders)
