[package]
name = "ic-certified-assets"
version = "0.2.5"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust support for asset certification."
documentation = "https://docs.rs/ic-certified-assets"
categories = ["wasm", "filesystem", "data-structures"]
keywords = ["internet-computer", "dfinity"]

[dependencies]
base64.workspace = true
candid = { workspace = true }
hex.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-certified-map = { version = "0.3", git = "https://github.com/dfinity/cdk-rs.git", branch = "beta" }
ic-response-verification = "0.1.0"  # Bump this, after candid is bumped to 0.9 in this crate
itertools.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
sha2.workspace = true

[dev-dependencies]
candid = { workspace = true, features = ["parser"] }
ic-crypto-tree-hash = { git = "https://github.com/dfinity/ic.git", rev = "a533346f63f4091eb64692891de0d5b2ffd5b22a"  }

